--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: instalar dependencias
-        run: pip install -r requirements.txt
+        run: pip install -r Backend/requirements.txt
 
       - name: Esperando o PostgreSQL ficar pronto
         run: sleep 15
