--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Executar pytest
         env:
           DATABASE_URL: postgresql://postgres:admin@localhost:5432/nome_database
-        run: pytest teste.py
+        run: pytest Backend/teste.py
