--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: Build and Deploy
+
 on:
   push:
   pull_request:
@@ -23,30 +24,32 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: pulling git repo
+      - name: Check out the code
         uses: actions/checkout@v2
 
-      - name: Instalando o Python
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: "3.12.4"
 
-      - name: Atualizar pip
+      - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
-      - name: Instalar dependências
+      - name: Install dependencies
         run: pip install -r Backend/requirements.txt
 
-      - name: Aguardar PostgreSQL
+      - name: Wait for PostgreSQL
         run: |
-          for i in {1..15}; do
-            pg_isready -h postgres -p 5432 && echo "PostgreSQL está pronto!" && break
+          for i in {1..20}; do
+            PGPASSWORD=admin psql -h localhost -U postgres -d nome_database -c "SELECT 1" && echo "PostgreSQL está pronto!" && break
             echo "Esperando pelo PostgreSQL..."
             sleep 5
           done
-          pg_isready -h postgres -p 5432
 
-      - name: Executar pytest
+      - name: Check PostgreSQL status
+        run: PGPASSWORD=admin psql -h localhost -U postgres -d nome_database -c "SELECT 1"
+
+      - name: Run pytest
         env:
-          DATABASE_URL: postgresql://postgres:admin@postgres:5432/nome_database
+          DATABASE_URL: postgresql://postgres:admin@localhost:5432/nome_database
         run: pytest Backend/teste.py
