--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U user -h localhost" 
+          --health-cmd "pg_isready -U ${{ vars.DATABASE_USER }} -h localhost" 
           --health-interval 10s 
           --health-timeout 5s 
           --health-retries 5
@@ -42,13 +42,10 @@ jobs:
       - name: Wait for PostgreSQL
         run: |
           for i in {1..20}; do
-            PGPASSWORD=password psql -h localhost -U user -d mydatabase -c "SELECT 1" && echo "PostgreSQL está pronto!" && break
+            PGPASSWORD=${{ vars.DATABASE_PASSWORD }} psql -h localhost -U ${{ vars.DATABASE_USER }} -d ${{ vars.DATABASE_NAME }} -c "SELECT 1" && echo "PostgreSQL está pronto!" && break
             echo "Esperando pelo PostgreSQL..."
             sleep 5
           done
-
-      - name: Check PostgreSQL status
-        run: PGPASSWORD=password psql -h localhost -U user -d mydatabase -c "SELECT 1"
 
       - name: Create .env file in Backend
         run: |
